# image-cleaner

./: .flake8  .gitignore  LICENSE  README.md  README.rst  changelog.md  changelogs.md  imagecleaner.py  imagedhash.py  pyproject.toml  requirements.txt  setup.py
imagecleaner/: __init__.py  cli.py
